byte-code-compiler/test_files/typing/good/testfile-constructor.psc
class A{
	u64 number;

	A(char param){
		number = param;
	}
}

A var = new A('C');