byte-code-compiler/test_files/typing/bad/testfile-arith-1.psc
class S { i32 a; };
i32 main() {
    S s;
    s = s+s;
}